# services/auth/data/response/signout_response.go
@@ -1,0 +1,5 @@
+package response
+
+type SignOutResponse struct {
+	Message string `json:"message"`
+}
